# pyntcloud

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  MANIFEST.in  Pipfile  README.md  README.rst  UNLICENSE  UNLICENSE.md  appveyor.yml  dev_env.yml  env.yml  enviroment.yml  pyntcloud_env.yml  pyproject.toml  requirements.txt  setup.py  stl.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  pyncloud_ci.yml  pyntcloud_cd.yml  pythonpackage.yml  tests.yaml
binder/: environment.yml  postBuild
data/: python.mat  python.npz  python_bin.ply  python_cloud.ply  sphere.ply
docs/: 01_index.rst  03_installation.rst  04_PyntCloud.rst  Index.ipynb  Makefile  PyntCloud.rst  Untitled.ipynb  conf.py  contributing.rst  filters.rst  filters_dev.rst  index.rst  installation.rst  introduction.rst  io.rst  io_dev.rst  jupyter.rst  make.bat  points.rst  requirements.txt  samplers.rst  samplers_dev.rst  scalar_fields.rst  scalar_fields_dev.rst  structures.rst  structures_dev.rst
examples/: Basic_Numpy_Plotting.ipynb  [scalar_fields] eigenvalues.ipynb  [scalar_fields] normals.ipynb  [structures] VoxelGrid.ipynb  [visualization] Polylines.ipynb  [visualization] PyntCloud.ipynb
pyntcloud/: .travis.yaml  __init__.py  base.py  core_class.py  pyntcloud.py
test/: test_core_class.py  test_filters.py  test_geometry.py  test_io.py  test_sampling.py  test_sf.py  test_structures.py
test/data/: mesh.ply  (+16 more)
tests/: conftest.py  test_core_class.py  test_filters.py  test_geometry.py  test_io.py  test_sf.py
(+262 files in other folders)
